fixed spacing in project  details

--- a/personal-site/src/styles/output.css
+++ b/personal-site/src/styles/output.css
@@ -324,6 +324,18 @@
   .w-\[1000px\] {
     width: 1000px;
   }
+  .w-\[1200px\] {
+    width: 1200px;
+  }
+  .w-\[1500px\] {
+    width: 1500px;
+  }
+  .max-w-\[000px\] {
+    max-width: 000px;
+  }
+  .max-w-\[100px\] {
+    max-width: 100px;
+  }
   .max-w-\[400px\] {
     max-width: 400px;
   }
@@ -426,6 +438,9 @@
   }
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
+  }
+  .px-5 {
+    padding-inline: calc(var(--spacing) * 5);
   }
   .px-6 {
     padding-inline: calc(var(--spacing) * 6);
